src/objects/AuditAnswer__c.object
<CustomObject>
    <fields>
        <fullName>AuditQuestionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AuditQuestionId</label>
        <referenceTo>AuditQuestion__c</referenceTo>
        <relationshipLabel>AuditAnswers</relationshipLabel>
        <relationshipName>AuditAnswers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AuditResultId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AuditResultId</label>
        <referenceTo>AuditResult__c</referenceTo>
        <relationshipLabel>AuditAnswers</relationshipLabel>
        <relationshipName>AuditAnswers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CoolerId__c</fullName>
        <label>CoolerId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsSelected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSelected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PoiId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PoiId</label>
        <referenceTo>UIControl__c</referenceTo>
        <relationshipLabel>AuditAnswers</relationshipLabel>
        <relationshipName>AuditAnswers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>AuditAnswer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AuditAn Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AuditAnswers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>